2023-11-06T08:13:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6767972059 # 2052
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
* notice: last 14d: unq all: 21 54
* notice: prev accum: outdated-unq outdated-all / unq all: 1871 5642 / 1909 5696
* notice: next accum: outdated-unq outdated-all / unq all: 1871 5642 / 1910 5697
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-23 2023-11-06]

2023-11-06T00:45:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6764852574 # 2051
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
* notice: last 14d: unq all: 21 54
* notice: prev accum: outdated-unq outdated-all / unq all: 1856 5624 / 1909 5696
* notice: next accum: outdated-unq outdated-all / unq all: 1871 5642 / 1909 5696
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-22] / []

2023-11-05T16:10:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6762390287 # 2050
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
* notice: last 14d: unq all: 21 55
* notice: prev accum: outdated-unq outdated-all / unq all: 1856 5624 / 1909 5695
* notice: next accum: outdated-unq outdated-all / unq all: 1856 5624 / 1909 5696
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -14 -16 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-22 2023-11-05]

2023-11-05T08:11:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6760111577 # 2049