@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-06T08:13:10Z",
-  "count" : 4,
+  "timestamp" : "2023-11-06T16:12:51Z",
+  "count" : 2,
   "count_minmax" : [ 1, 5 ],
-  "count_decinc" : [ -1, +5 ],
-  "uniques" : 4,
+  "count_decinc" : [ -3, +5 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 1, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "uniques_decinc" : [ -2, +4 ]
 }
