@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-06T08:13:10Z",
+  "timestamp" : "2023-11-06T16:12:51Z",
   "count_outdated" : 5642,
   "uniques_outdated" : 1871,
-  "count" : 5697,
+  "count" : 5698,
   "uniques" : 1910,
   "clones" : [
     {
       "timestamp": "2023-10-23T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 1, 5 ],
-      "uniques": 4,
+      "count_decinc": [ 3, 5 ],
+      "uniques": 2,
       "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "uniques_decinc": [ 2, 4 ]
     },
     {
       "timestamp": "2023-10-24T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-11-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
