@@ -1,11 +1,11 @@
 {
-  "count": 54,
+  "count": 53,
   "uniques": 21,
   "clones": [
     {
       "timestamp": "2023-10-23T00:00:00Z",
-      "count": 4,
-      "uniques": 4
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2023-10-24T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-11-06T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
