@@ -1,3 +1,12 @@
+2023-11-06T16:12:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6773441269 # 2053
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
+* notice: last 14d: unq all: 21 53
+* notice: prev accum: outdated-unq outdated-all / unq all: 1871 5642 / 1910 5697
+* notice: next accum: outdated-unq outdated-all / unq all: 1871 5642 / 1910 5698
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -2 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-10-23 2023-11-06]
+
 2023-11-06T08:13:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6767972059 # 2052
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
